# echovault

./: CHANGELOG.md  LOCAL_PATCHES.md  README.md  pyproject.toml
.codex/skills/echovault/: SKILL.md
dashboard/src/: main.rs  ui.rs
hooks/: echovault-prompt-context.sh  echovault-save-reminder.sh
src/memory/: cli.py  config.py  core.py  db.py  markdown.py  mcp_server.py  search.py  setup.py
src/memory/dashboard/: __init__.py  app.py  editor.py
src/memory/dashboard/widgets/: command_bar.py  confirm.py  header_bar.py  lazy_input.py  memory_table.py
src/memory/embeddings/: llama.py  openai_embed.py
tests/: test_cli.py  test_config.py  test_core.py  test_dashboard.py  test_import.py  test_mcp_server.py  test_setup.py
